# spotify-github-profile

./: .env.example  .gitattributes  .gitignore  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_README.md  DivisiblebyNumber.python  Dockerfile  LICENSE  README.md  TESTING_SUMMARY.md  TEST_VIEW_SUMMARY.md  TEST_VIEW_SVG_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/blocks/: all.json
.github/workflows/: ci.yml
api/: app.py  callback.py  login.py  ping.py  requirements.txt  spotify.py  theme_dev.py  view.py  view.svg.py  view_params.py  view_utils.py
api/templates/: callback.html.j2  spotify.apple-music.html.j2  spotify.apple.html.j2  spotify.compact.html.j2  spotify.default.html.j2  spotify.html.j2  spotify.karaoke.html.j2  spotify.natemoo-re.html.j2  spotify.novatorem.html.j2  spotify.spotify-embed.html.j2
api/util/: spotify.py
etc/: nginx.conf
tests/: test_api_callback.py  test_api_login.py  test_api_ping.py  test_api_view.py  test_api_view_sg.py  test_util_profanity.py  test_util_remaster.py
util/: firestore.py  profanity.py  remaster.py  spotify.py
