[project]
name = "spotify-github-profile"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.1.2",
    "Werkzeug==3.1.3",
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "firebase-admin==7.1.0",
    "Pillow==11.3.0",
    "colorgram.py==1.2.0",
    "markupsafe==3.0.3",
    "gunicorn==23.0.0",
    "profanityfilter==2.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = [
    "api",
    "util",
]
omit = [
    "tests/*",
    "venv/*",
    "*/migrations/*",
    "manage.py",
    "*/settings/*",
    "*/static/*",
    "*/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
